# WaviFM

./: .gitignore  CMakeLists.txt  README.md  python_environment.yml
data/10x_visium_LIBD/: README.md
examples/human_dlpfc/: F_means.npz  F_pca.npz  L_pca.npz  dlpfc_analysis.ipynb  dlpfc_preprocessing_and_to_csv.ipynb  dlpfc_wavifm_pca_inference.ipynb  dplfc_wavest_inference.Rmd  idwt_L_means.npz
examples/multilength_robustness/: medium.ipynb  multilength.ipynb  thick.ipynb  thin.ipynb
examples/using_spatial_info/: polygons.ipynb  polygonsSpotPermuted.ipynb  rectangles.ipynb  rectanglesSpotPermuted.ipynb
examples/wavelet_inference/: wavelet_inference.ipynb
examples/wavelet_reconstruction/: wavelet_reconstruction_10M.ipynb  wavelet_reconstruction_2M.ipynb
examples/wavest_comparison/: F_meansWaviFM.npz  comparison_analysis.ipynb  data_simulation_and_wavest_inference.Rmd  idwt_L_meansWaviFM.npz  wavifm_inference.ipynb
scripts/: cavi.py  cavi_elbo.py  cavi_evaluation.py  cavi_init.py  cavi_plot_utilities.py  cavi_updates.py  cavi_utilities.py  mockUtilities.py  run_wavifm.py  utilities.py
src/: CMakeLists.txt  bindings.cpp  bindings.hpp  cavi.cpp  cavi.hpp  elbo.cpp  elbo.hpp  fn.cpp  init.cpp  init.hpp  parameters.cpp  parameters.hpp  tensor.cpp  tensor.hpp  updates.cpp  updates.hpp  utilities.cpp  utilities.hpp
test/: CMakeLists.txt  cavi_test.cpp  elbo_test.cpp  mocks.cpp  mocks.hpp  parameters_test.cpp  testing_utilities.cpp  testing_utilities.hpp  updates_test.cpp  utilities_test.cpp
